@@ -8,6 +8,7 @@ v 7.5.0
   - Tie up loose ends with annotated tags: API & UI (Sean Edge)
   - Return valid json for deleting branch via API (sponsored by O'Reilly Media)
   - Expose username in project events API (sponsored by O'Reilly Media)
+  - Allow user confirmation to be skipped for new users via API
 
 v 7.4.2
   - Fix internal snippet exposing for unauthenticated users
